test/corpus/minimal.txt
==================
Minimal Request
==================

GET / HTTP/1.1

---

(source_file
  (request
    (request_line
      method: (method
        (method_chunk))
      url: (url
        (url_chunk))
      proto: (proto
        (proto_chunk)))))
